--- a/public/images/favicon/manifest.json
+++ b/public/images/favicon/manifest.json
@@ -1,5 +1,5 @@
 {
- "name": "mldangelo.com",
+ "name": "heyharitha.github.io",
  "icons": [
   {
    "src": "/images/favicon/android-chrome-192x192.png",
